@@ -1,4 +1,5 @@
 Release 0.2.9
+   - Rename sources *.pm -> *.rakumod
    - [PDF::Font::Loader::Enc::CMap][cmap-decode.t]
    -- Make some use of code-ranges in the CMAP file; this seems to be
       the correct way of distinguishing 1 or 2 byte encodings. More work
